# kgg-dec-mirror

./: .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.MD  Usage.zh.txt
.github/workflows/: cmake-multi-platform.yml
src/: jobs.hpp  main.cpp
src/common/: base64.h  endian_helper.h
src/infra/: infra.cpp  infra.h  sqlite_base.h  sqlite_error.h  sqlite_fn.h
src/qmc2/: ekey.cpp  qmc2_factory.cpp
src/tc_tea/: tc_tea.cpp  tc_tea.h
